<resources>
    <string name="app_name">Digital Art Gallery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_the_artist">About the Artist</string>
    <string name="display_settings">Display Settings</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>

    <string name="paragraph1">Alex Kagan, a Swartzberg House resident and client of CJE’s Holocaust Community Services, is
determined to remain active and engaged in life. In his 80s, Kagan has an impressively large
collection of computer-generated images that he has created, even though he only started producing
them in 2016. His subject matter includes landscapes, gatherings, symbols, flowers and other subject
 matter.</string>

    <string name="paragraph2">Kagan, who emigrated from the former Belarus to live in the US, was born in Minsk. He lost all of
 his family during the Holocaust. He has a PhD in computer science and spent his career as a
 computer specialist in artificial intelligence. Kagan prefers not to talk about the process of
 creating his artwork. Suffice it to say that he controls his computer’s “brain” to convert
 photographic images into expressive, painterly artworks. He then prints them off on glossy photo
 paper, and the results are stunning.</string>
    <string name="alex_kagan_name">Alex Kagan</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="display_settings_title">Display Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="display_image_size">Image Size</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="default_columns">2</string>

</resources>