<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/content_about">

    <ImageView
        android:id="@+id/alex_kagan_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/alex_kagan"
        app:layout_anchor="@id/top_bar"
        app:layout_anchorGravity="bottom"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/alex_kagan_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/defaultBackgroundColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/top_bar"
        app:layout_anchorGravity="bottom" />


    <TextView
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paragraph1"
        app:layout_anchor="@id/alex_kagan_imageview"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"
        android:id="@+id/paragraph1_textview"
        android:gravity="center_horizontal"

        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paragraph2"
        app:layout_anchor="@id/paragraph1_textview"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp">

    </TextView>
</merge>